Fix stupid syntax mistakes